test/test_examples/syntactic_examples/syntax_error/error_statement_99.zig
// Syntax error: Identifier instead of "while" keyword

const ifj = @import("ifj24.zig");

pub fn main() void {
    var x: i32 = 32;
    const y : i32 = 89;

    _while(y < x)
    {
        processItem(1458242);
    }
}